--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -32,6 +32,11 @@ h2 {
     border-color: hsl(225, 26%, 48%);
 }
 
+#alert {
+    text-align: center;
+    margin-top: 20px;
+}
+
 @media (min-width: 990px) and (max-width: 1400px) {
     .div-form-title {
         margin-right: 2rem;
